--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 https://book.pythontips.com/en/latest/index.html
 https://docs.quantifiedcode.com/python-anti-patterns/index.html
 
+DASH
+SNOWFLAKE \ SPARK
 Understanding of the threading limitations of Python, and multi-process architecture
 Knowledge of user authentication and authorization between multiple system, server and environments
 Understanding of fundamental design principles behind a scalable application
