--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ https://docs.quantifiedcode.com/python-anti-patterns/index.html
 
 DASH
 SNOWFLAKE \ SPARK
+CHATGPT API
 Understanding of the threading limitations of Python, and multi-process architecture
 Knowledge of user authentication and authorization between multiple system, server and environments
 Understanding of fundamental design principles behind a scalable application
