--- a/TODO
+++ b/TODO
@@ -6,5 +6,4 @@ SNOWFLAKE \ SPARK
 Understanding of the threading limitations of Python, and multi-process architecture
 Knowledge of user authentication and authorization between multiple system, server and environments
 Understanding of fundamental design principles behind a scalable application
-Familiarity with event-driven programming in Python
-https://levelup.gitconnected.com/use-git-like-a-senior-engineer-ef6d741c898e
+Familiarity with event-driven programming
