--- a/TODO
+++ b/TODO
@@ -18,3 +18,14 @@ https://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/self-pa
 https://github.com/GoogleCloudPlatform/training-data-analyst
 
 
+
+improving API performance
+GraphQL
+AWS services
+Redshift / DynamoDB / Athena / S3(Data-lake)
+Lambdas
+Kafka / SQS / SNS / API-GW
+EC2, RDS, S3, CloudFront, ElastiCache, ElasticSearch
+gRPC
+SOA
+HTTP2
